--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,14 +1,18 @@
 <mat-toolbar>
   <a routerLink="/">
-    <img src="../../../../assets/images/logo-minimal.png" alt="Brand" height="28">
+    <img src="assets/images/logo-minimal.png" alt="Brand" height="28">
   </a>
   <span class="spacer"></span>
-  <a mat-button routerLink="login" routerLinkActive="mat-accent">Login</a>
-  <a mat-button routerLink="registro" routerLinkActive="mat-accent">Registro</a>
-  <div class="user-menu">
-    <img class="avatar" src="../../../../assets/images/user_default.png" alt="">
-    <button mat-icon-button>
+  <div *ngIf="user$ | async as user; else unlogged" class="user-menu">
+    <a routerLink="perfil" class="avatar">
+      <img class="avatar" src="assets/user_default.png" alt="" height="24">
+    </a>
+    <button mat-icon-button (click)="logout()">
       <mat-icon>logout</mat-icon>
     </button>
   </div>
+  <ng-template #unlogged>
+    <a mat-button routerLink="login" routerLinkActive="mat-accent">Login</a>
+    <a mat-button routerLink="registro" routerLinkActive="mat-accent">Registro</a>
+  </ng-template>
 </mat-toolbar>
