--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
   <p>
     <mat-form-field appearance="fill">
       <mat-label>Email</mat-label>
-      <input type="email" name="email" matInput required ngModel>
+      <input type="email" name="email" matInput ngModel required />
       <mat-icon matSuffix>email</mat-icon>
     </mat-form-field>
   </p>
@@ -12,12 +12,17 @@
   <p>
     <mat-form-field appearance="fill">
       <mat-label>Senha</mat-label>
-      <input type="password" name="password" matInput required ngModel>
+      <input type="password" name="password" matInput ngModel required />
       <mat-icon matSuffix>lock</mat-icon>
     </mat-form-field>
   </p>
 
-  <button mat-raised-button type="submit" color="primary" [disabled]="login.invalid">
+  <button
+    type="submit"
+    mat-raised-button
+    color="primary"
+    [disabled]="login.invalid"
+  >
     Entrar
   </button>
 </form>
