Implementações na home. Consumindo a TMDB API.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <a routerLink="/">
-    <img src="assets/logo-minimal.png" alt="Brand" height="28" />
+    <img src="../../../../assets/logo-minimal.png" alt="Brand" height="28" />
   </a>
   <span class="spacer"></span>
   <div *ngIf="user$ | async as user; else unlogged" class="user-menu">
